basic bootstrap classes

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <title>ng-accordion-tabs demo</title>
 </head>
 <body>
   <div>
-    <ng-a-tabs type="long">
+    <ng-a-tabs>
       <ng-a-tab title="Pane 1">
         <h1>Pane 1 Content</h1>
       </ng-a-tab>
