--- a/demo/index.html
+++ b/demo/index.html
@@ -5,7 +5,7 @@
   <title>ng-accordion-tabs demo</title>
 </head>
 <body>
-  <div>
+  <div style="width: 70%; margin: 20% auto;">
     <ng-a-tabs>
       <ng-a-tab title="Pane 1">
         <h1>Pane 1 Content</h1>
